# devtoolbox

./: .gitignore  .pre-commit-config.yaml  README.md  Readme.md  devtoolbox.doap  devtoolbox.in  local.sh  me.iepure.devtoolbox-2.json~  me.iepure.devtoolbox-debug.json~  me.iepure.devtoolbox-release.json  me.iepure.devtoolbox.json  me.iepure.devtoolbox.json~  me.iepure.devtoolbox.yml  meson.build  meson_options.txt  pypi-dependencies.json  requirements.txt  run-flat.sh
data/: devtoolbox.gresource.xml  me.iepure.devtoolbox-search-provider.ini  me.iepure.devtoolbox.SearchProvider.service.in  me.iepure.devtoolbox.appdata.xml.in  me.iepure.devtoolbox.desktop.in  me.iepure.devtoolbox.desktop.in.in  me.iepure.devtoolbox.gschema.xml  me.iepure.devtoolbox.metainfo.xml.in  meson.build
data/css/: main.css  style.css
data/gtk/: help-overlay.ui
data/icons/: meson.build
data/icons/symbolic/: db-symbolic.svg.license
data/markdown-preview/: fenced-code-colors-dark.css  fenced-code-colors-light.css  fenced-code-colors.css  github-markdown-dark.css  github-markdown.css  scrollpos-script.js
data/ui/: about.ui  about_window.ui  base64_encoder_utility.ui  cron_parser_utility.ui  empty_favorites.ui  formatter_utility.ui  gzip_encoder_utility.ui  hash_generator_utility.ui  html_encoder_utility.ui  json2yaml_utility.ui  jwt_decoder_utility.ui  lorem_ipsum_generator.ui  main.ui  number_base_utility.ui  textarea.ui  timestamp_utility.ui  url_encoder_utility.ui  utilities_view.ui  utility_title.ui
data/ui/views/: blank_view.ui
data/ui/widgets/: text_area.ui  text_image_area.ui  text_image_file_area.ui  textfield_action_row.ui  utility_title.ui
devtoolbox/: about_dialog.py  application.py  const.py  meson.build  utils.py  window.py
devtoolbox/service/: cron_parser.py  hash_generator.py  json2yaml.py  json_formatter.py  lorem_ipsum_generator.py  meson.build  sql_formatter.py  url_encoder.py  xml_formatter.py
devtoolbox/services/: base64_encoder.py  cron_parser.py  gzip_encoder.py  hash_generator.py  html_encoder.py  json2yaml.py  json_formatter.py  jwt_decoder.py  lorem_ipsum_generator.py  meson.build  number_base.py  sql_formatter.py  url_encoder.py  xml_formatter.py
devtoolbox/views/: __init__.py  base64_encoder_utility.py  blank_view.py  cron_parser_utility.py  favorites_view.py  formatter_utility.py  gzip_encoder_utility.py  hash_generator_utility.py  html_encoder_utility.py  json2yaml_utility.py  jwt_decoder_utility.py  lorem_ipsum_utility.py  meson.build  number_base_utility.py  timestamp_utility.py  url_encoder_utility.py  utilities_view.py
devtoolbox/widgets/: base64_encoder_utility.py  cron_parser_utility.py  favorites_view.py  formatter_utility.py  gzip_encoder_utility.py  hash_generator_utility.py  html_encoder_utility.py  json2yaml_utility.py  jwt_decoder_utility.py  lorem_ipsum_utility.py  meson.build  number_base_utility.py  sidebar_element.py  text_area.py  text_image_area.py  text_image_file_area.py  textarea.py  textfield_action_row.py  timestamp_utility.py  url_encoder_utility.py  utilities_view.py  utility_title.py
src/: __init__.py  devtoolbox.gresource.xml  devtoolbox.in  main.py  meson.build  search_provider.py  style.css  tools.py  utils.py  window.py
src/compressors/: bz2_compressor.py  compressor.py  gzip_compressor.py  lzma_compressor.py  meson.build
src/css/: style-dark-hc.css  style-dark.css  style-hc.css  style.css
src/formatters/: css.py  css_minifier.py  formatter.py  html.py  js.py  js_minifier.py  json.py  meson.build  sql.py  xml.py
src/services/: __init__.py  base64_encoder.py  certificate_parser.py  colorblindness_simulator.py  compressor-old.py  compressor.py  cron_converter.py  gzip_compressor.py  hash_generator.py  html_encoder.py  image_converter.py  json-yaml.py  json_validator.py  json_yaml.py  json_yaml_toml.py  jwt_decoder.py  lorem_generator.py  markdown_preview.py  meson.build  regex_tester.py  text_diff.py  text_inspector.py  url_encoder.py  uuid_generator.py  xml_validator.py
src/ui/: about_dialog.blp  about_window.blp  about_window.ui  window.blp  window.ui
src/ui/gtk/: help-overlay.blp  help-overlay.ui
src/ui/views/: base64_encoder.blp  base64_encoder.ui  base_converter.blp  base_converter.ui  certificate_parser.blp  certificate_parser.ui  certificate_request_generator.blp  chmod_calculator.blp  color_converter.blp  colorblindness_simulator.blp  colorblindness_simulator.ui  compressor.blp  contrast_checker.blp  contrast_checker.ui  cron_converter.blp  cron_converter.ui  empty-favorites.ui  empty_favorites.ui  formatter.blp  formatter.ui  gzip_compressor.blp  gzip_compressor.ui  hash_generator.blp  hash_generator.ui  html_encoder.blp  html_encoder.ui  image_converter.blp  image_converter.ui  json_validator.blp  json_yaml.blp  json_yaml.ui  json_yaml_toml.blp  jwt_decoder.blp  jwt_decoder.ui  lorem_generator.blp  lorem_generator.ui  markdown_preview.blp  markdown_preview.ui  qrcode_generator.blp  random_generator.blp  (+18 more)
src/ui/widgets/: binary_selector.blp  binary_selector.ui  date_area.blp  date_area.ui  entry_row.blp  entry_row.ui  file_view.blp  file_view.ui  file_viewer.ui  image_area.blp  image_area.ui  spin_area.blp  (+11 more)
src/views/: base64_encoder.py  base_converter.py  certificate_parser.py  certificate_request_generator.py  chmod_calculator.py  color_converter.py  colorblindness_simulator.py  compressor.py  contrast_checker.py  cron_converter.py  favorites.py  formatter.py  gzip_compressor.py  hash_generator.py  html_encoder.py  image_converter.py  json_validator.py  json_yaml.py  json_yaml_toml.py  jwt_decoder.py  lorem_generator.py  markdown_preview.py  meson.build  qrcode_generator.py  random_generator.py  regex_tester.py  reverse_cron.py  tab_content.py  text_diff.py  text_inspector.py  timestamp.py  url_encoder.py  uuid_generator.py  xml_validator.py
src/widgets/: binary_selector.py  date_area.py  entry_row.py  file_view.py  file_viewer.py  image_area.py  meson.build  sidebar_item.py  spin_area.py  text_area.py  text_field_action_row.py  text_file_area.py  theme_switcher.py  utility_title.py  webview_area.py
(+45 files in other folders)
